--- a/Application/src/main/res/values/styles.xml
+++ b/Application/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
+        <item name="android:windowBackground">@drawable/app_background</item>
         <!-- Customize your theme here. -->
     </style>
 
