первый фрагмент работающего меню для тем с группами. ref #53

--- a/Application/src/main/res/layout/activity_main.xml
+++ b/Application/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 
         <fragment
             android:id="@+id/navigation_drawer"
-            android:name="com.whiteboxteam.gliese.ui.fragment.NavigationDrawerFragment"
+            android:name="com.whiteboxteam.gliese.ui.fragment.TopicDrawerFragment"
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
