--- a/Application/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/Application/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,4 +1,5 @@
-<ExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
+<ExpandableListView android:id="@+id/drawer_list_view"
+          xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
