--- a/Application/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/Application/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,10 +1,8 @@
-<ExpandableListView android:id="@+id/drawer_list_view"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:background="#cccc"
-          android:choiceMode="singleChoice"
-          android:divider="@android:color/transparent"
-          android:dividerHeight="0dp"
-          tools:context=".NavigationDrawerFragment"/>
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/drawer_recycler_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/drawer_background"
+    tools:context=".NavigationDrawerFragment"/>
