--- a/Application/src/main/res/layout/fragment_topic.xml
+++ b/Application/src/main/res/layout/fragment_topic.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.whiteboxteam.gliese.ui.custom.PagerSlidingTabStrip
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sliding_tab_height"
+        android:background="?attr/colorPrimary"
+        android:paddingLeft="@dimen/sliding_tab_horizontal_padding"
+        android:paddingRight="@dimen/sliding_tab_horizontal_padding"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
