--- a/Application/src/main/res/layout/item_value.xml
+++ b/Application/src/main/res/layout/item_value.xml
@@ -4,20 +4,93 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="250dp"
     android:layout_height="400dp"
-    android:layout_gravity="center_horizontal"
     card_view:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/text_value_name"
-            android:layout_width="wrap_content"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+
+            <ImageView
+                android:id="@+id/image_thumb"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:scaleType="centerCrop"
+                />
+
+            <TextView
+                android:id="@+id/text_discount"
+                android:layout_width="48dp"
+                android:layout_height="30dp"
+                android:background="@drawable/text_discount_background"
+                android:gravity="center"
+                android:padding="4dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="48sp"/>
+            android:orientation="horizontal"
+            android:padding="12dp">
+
+            <TextView
+                android:id="@+id/text_old_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+                android:textSize="22sp"/>
+
+            <TextView
+                android:id="@+id/text_new_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+                android:textSize="22sp"/>
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/drawer_divider_color"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp">
+
+            <Button
+                style="@style/AppCompat.Button.Flat"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/btn_flat_min_height"
+                android:text="Инфо"
+                android:textColor="@color/primary"/>
+
+            <Button
+                style="@style/AppCompat.Button.Flat"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/btn_flat_min_height"
+                android:text="Купить"
+                android:textColor="@color/accent"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 
