--- a/Application/src/main/res/layout/item_value.xml
+++ b/Application/src/main/res/layout/item_value.xml
@@ -18,6 +18,12 @@
             android:layout_weight="1"
             >
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+
             <ImageView
                 android:id="@+id/image_thumb"
                 android:layout_width="match_parent"
