чуть более мягкая загрузка приложения. прогресс бар для пустой категории. resolve #70

--- a/Application/src/main/res/layout/fragment_topic.xml
+++ b/Application/src/main/res/layout/fragment_topic.xml
@@ -13,10 +13,23 @@
         android:paddingLeft="@dimen/sliding_tab_horizontal_padding"
         android:paddingRight="@dimen/sliding_tab_horizontal_padding"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </RelativeLayout>
+
 
 </LinearLayout>
