--- a/Application/src/main/res/layout/fragment_category.xml
+++ b/Application/src/main/res/layout/fragment_category.xml
@@ -3,20 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="horizontal"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
     <com.whiteboxteam.gliese.ui.custom.SnappyRecyclerView
         android:id="@+id/recycler_view_1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
-
-    <com.whiteboxteam.gliese.ui.custom.SnappyRecyclerView
-        android:id="@+id/recycler_view_2"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_width="250dp"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
