--- a/Application/src/main/res/layout-w600dp/fragment_category.xml
+++ b/Application/src/main/res/layout-w600dp/fragment_category.xml
@@ -1,25 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="horizontal"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    >
 
-    <com.whiteboxteam.gliese.ui.custom.SnappyRecyclerView
-        android:id="@+id/recycler_view_1"
-        android:layout_width="250dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/item_horizontal_margin"
-        />
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
-    <com.whiteboxteam.gliese.ui.custom.SnappyRecyclerView
-        android:id="@+id/recycler_view_2"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/item_horizontal_margin"
-        />
+        <com.whiteboxteam.gliese.ui.custom.SnappyRecyclerView
+            android:id="@+id/recycler_view_1"
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="@dimen/item_horizontal_margin"
+            />
 
-</LinearLayout>
+        <com.whiteboxteam.gliese.ui.custom.SnappyRecyclerView
+            android:id="@+id/recycler_view_2"
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_horizontal_margin"
+            />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/no_value_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:text="@string/no_value_caption"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:visibility="invisible"/>
+</RelativeLayout>
