все для материальных диалогов. взято из http://github.com/afollestad/material-dialogs/. ref #80

--- a/Application/src/main/res/values/colors.xml
+++ b/Application/src/main/res/values/colors.xml
@@ -22,4 +22,13 @@
     <color name="flat_disabled_text">#40000000</color>
     <color name="flat_normal_text">#000000</color>
 
+    <color name="md_btn_selected">#33969696</color>
+    <color name="md_btn_selected_dark">#40cbcbcb</color>
+
+    <color name="md_divider_black">#10000000</color>
+    <color name="md_divider_white">#10ffffff</color>
+
+    <color name="md_material_blue_600">#1e88e5</color>
+    <color name="md_material_blue_800">#1565c0</color>
+
 </resources>
