--- a/Application/src/main/res/values/colors.xml
+++ b/Application/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="drawer_item_background_inactive">@android:color/transparent</color>
 
     <color name="drawer_title_text_color">@color/primary_text_default_material_light</color>
+    <color name="secondary_text">#777</color>
     <color name="drawer_divider_color">#1fb6b6b6</color>
     <color name="drawer_subheader_text_color">@color/secondary_text_default_material_light</color>
 
