--- a/Application/src/main/res/values/styles.xml
+++ b/Application/src/main/res/values/styles.xml
@@ -5,6 +5,11 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+
+        <item name="md_content_color">@color/secondary_text</item>
+        <item name="md_positive_color">@color/primary</item>
+        <item name="md_neutral_color">@color/primary</item>
+        <item name="md_negative_color">@color/primary</item>
     </style>
 
     <style name="AppCompat.Button.Flat" parent="Base.TextAppearance.AppCompat">
