--- a/Application/src/main/res/layout-w600dp/fragment_category.xml
+++ b/Application/src/main/res/layout-w600dp/fragment_category.xml
@@ -29,6 +29,13 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
     <TextView
         android:id="@+id/no_value_text"
         android:layout_width="wrap_content"
