--- a/Application/src/main/res/layout/fragment_topic.xml
+++ b/Application/src/main/res/layout/fragment_topic.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,7 +12,9 @@
         android:layout_height="@dimen/sliding_tab_height"
         android:background="?attr/colorPrimary"
         android:paddingLeft="@dimen/sliding_tab_horizontal_padding"
-        android:paddingRight="@dimen/sliding_tab_horizontal_padding"/>
+        android:paddingRight="@dimen/sliding_tab_horizontal_padding"
+        app:pstsIndicatorColor="@android:color/white"
+        app:pstsTextColorSelected="@android:color/white"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
