--- a/Application/src/main/res/layout/item_value.xml
+++ b/Application/src/main/res/layout/item_value.xml
@@ -39,6 +39,7 @@
                 android:background="@drawable/text_discount_background"
                 android:gravity="center"
                 android:padding="4dp"
+                android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 />
