--- a/Application/src/main/res/values/styles.xml
+++ b/Application/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/app_background</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/primary_dark</item>
 
+        <item name="md_dark_theme">false</item>
         <item name="md_content_color">@color/secondary_text</item>
         <item name="md_positive_color">@color/primary</item>
         <item name="md_neutral_color">@color/primary</item>
