--- a/Application/src/main/res/menu/actions.xml
+++ b/Application/src/main/res/menu/actions.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/action_price_filter"
+        android:icon="@drawable/ic_max_price"
         android:title="Максимальная цена"
         app:showAsAction="ifRoom"/>
 
